--- a/programs/golosd/CMakeLists.txt
+++ b/programs/golosd/CMakeLists.txt
@@ -37,6 +37,7 @@ target_link_libraries(
         golos::raw_block
         golos::block_info
         golos::json_rpc
+        golos::mongo_db
         golos_protocol
         fc
         ${CMAKE_DL_LIBS}
