--- a/plugins/mongo_db/CMakeLists.txt
+++ b/plugins/mongo_db/CMakeLists.txt
@@ -14,22 +14,36 @@ find_package(libmongoc-1.0 1.8)
 
 if (NOT libmongoc-1.0_FOUND)
   message("Could NOT find MongoDB. Installing it...")
-  execute_process(COMMAND sudo apt-get -y install pkg-config libssl-dev libsasl2-dev)
-# execute_process(COMMAND rm -rf /tmp/golos-mongo-drivers)
-  execute_process(COMMAND mkdir /tmp/golos-mongo-drivers)
-  execute_process(COMMAND wget https://github.com/mongodb/mongo-c-driver/releases/download/1.9.5/mongo-c-driver-1.9.5.tar.gz WORKING_DIRECTORY /tmp/golos-mongo-drivers)
-  execute_process(COMMAND tar xzf mongo-c-driver-1.9.5.tar.gz WORKING_DIRECTORY /tmp/golos-mongo-drivers)
-  execute_process(COMMAND ./configure --disable-automatic-init-and-cleanup --enable-static WORKING_DIRECTORY /tmp/golos-mongo-drivers/mongo-c-driver-1.9.5)
-  execute_process(COMMAND make WORKING_DIRECTORY /tmp/golos-mongo-drivers/mongo-c-driver-1.9.5)
-  execute_process(COMMAND sudo make install WORKING_DIRECTORY /tmp/golos-mongo-drivers/mongo-c-driver-1.9.5)
+  execute_process(COMMAND sudo apt-get -y install pkg-config libssl-dev libsasl2-dev RESULT_VARIABLE res1)
+  message(STATUS "res1: " ${res1})
+# execute_process(COMMAND rm -rf /tmp/golos-mongo-drivers RESULT_VARIABLE res2)
+  message(STATUS "res2: " ${res2})
+  execute_process(COMMAND mkdir /tmp/golos-mongo-drivers RESULT_VARIABLE res3)
+  message(STATUS "res3: " ${res3})
+  execute_process(COMMAND wget https://github.com/mongodb/mongo-c-driver/releases/download/1.9.5/mongo-c-driver-1.9.5.tar.gz WORKING_DIRECTORY /tmp/golos-mongo-drivers RESULT_VARIABLE res4)
+  message(STATUS "res4: " ${res4})
+  execute_process(COMMAND tar xzf mongo-c-driver-1.9.5.tar.gz WORKING_DIRECTORY /tmp/golos-mongo-drivers RESULT_VARIABLE res5)
+  message(STATUS "res5: " ${res5})
+  execute_process(COMMAND ./configure --disable-automatic-init-and-cleanup --enable-static WORKING_DIRECTORY /tmp/golos-mongo-drivers/mongo-c-driver-1.9.5 RESULT_VARIABLE res6)
+  message(STATUS "res6: " ${res6})
+  execute_process(COMMAND make WORKING_DIRECTORY /tmp/golos-mongo-drivers/mongo-c-driver-1.9.5 RESULT_VARIABLE res7)
+  message(STATUS "res7: " ${res7})
+  execute_process(COMMAND sudo make install WORKING_DIRECTORY /tmp/golos-mongo-drivers/mongo-c-driver-1.9.5 RESULT_VARIABLE res8)
+  message(STATUS "res8: " ${res8})
 
-  execute_process(COMMAND git clone https://github.com/mongodb/mongo-cxx-driver.git --branch releases/v3.2 --depth 1 WORKING_DIRECTORY /tmp/golos-mongo-drivers)
-  execute_process(COMMAND cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local .. WORKING_DIRECTORY /tmp/golos-mongo-drivers/mongo-cxx-driver/build)
-  execute_process(COMMAND sudo make EP_mnmlstc_core WORKING_DIRECTORY /tmp/golos-mongo-drivers/mongo-cxx-driver/build)
-  execute_process(COMMAND make WORKING_DIRECTORY /tmp/golos-mongo-drivers/mongo-cxx-driver/build)
-  execute_process(COMMAND sudo make install WORKING_DIRECTORY /tmp/golos-mongo-drivers/mongo-cxx-driver/build)
+  execute_process(COMMAND git clone https://github.com/mongodb/mongo-cxx-driver.git --branch releases/v3.2 --depth 1 WORKING_DIRECTORY /tmp/golos-mongo-drivers RESULT_VARIABLE res9)
+  message(STATUS "res9: " ${res9})
+  execute_process(COMMAND cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local .. WORKING_DIRECTORY /tmp/golos-mongo-drivers/mongo-cxx-driver/build RESULT_VARIABLE res10)
+  message(STATUS "res10: " ${res10})
+  execute_process(COMMAND sudo make EP_mnmlstc_core WORKING_DIRECTORY /tmp/golos-mongo-drivers/mongo-cxx-driver/build RESULT_VARIABLE res11)
+  message(STATUS "res11: " ${res11})
+  execute_process(COMMAND make WORKING_DIRECTORY /tmp/golos-mongo-drivers/mongo-cxx-driver/build RESULT_VARIABLE res12)
+  message(STATUS "res12: " ${res12})
+  execute_process(COMMAND sudo make install WORKING_DIRECTORY /tmp/golos-mongo-drivers/mongo-cxx-driver/build RESULT_VARIABLE res13)
+  message(STATUS "res13: " ${res13})
 
-  execute_process(COMMAND sudo apt-get -y install mongodb)
+  execute_process(COMMAND sudo apt-get -y install mongodb RESULT_VARIABLE res14)
+  message(STATUS "res14: " ${res14})
 endif()
 
 message("MongoDB found, building plugin...")
