--- a/share/golosd/config/config_nondebug.ini
+++ b/share/golosd/config/config_nondebug.ini
@@ -1,5 +1,5 @@
 # Endpoint for P2P node to listen on
-# p2p-endpoint =
+p2p-endpoint = 0.0.0.0:4243
 
 # Maxmimum number of incoming connections on P2P endpoint
 # p2p-max-connections =
@@ -10,7 +10,7 @@
 # Pairs of [BLOCK_NUM,BLOCK_ID] that should be enforced as checkpoints.
 # checkpoint =
 
-# Number of threads for rpc-clients. Optimal value `<number of CPU>-1`
+# Number of threads for rpc-clients. The optimal value is `<number of CPU>-1`
 webserver-thread-pool-size = 2
 
 # IP:PORT for HTTP connections
@@ -44,32 +44,32 @@ single-write-thread = true
 # disabled on push_transaction() without any side-effects. The option doesn't have effect on a pushing signed blocks,
 # so it is safe.
 # Disabling of this option can increase performance.
-enable-plugins-on-push-transaction = true
+enable-plugins-on-push-transaction = false
 
 # A start size for shared memory file when it doesn't have any data. Possible cases:
 # - If shared memory has data and the value is greater then the size of shared_memory.bin,
 #   the file will be grown to requested size.
 # - If shared memory has data and the value is less then the size of shared_memory.bin, nothing happens.
 # Changing of this parameter doesn't require the replaying.
-shared-file-size = 100M
+shared-file-size = 2G
 
 # The minimum free space in the shared memory file. When free space reaches the following value, the size of the
 # shared_memory.bin increases by the value of inc-shared-file-size.
-min-free-shared-file-size = 50M
+min-free-shared-file-size = 500M
 
 # Step of increasing size of shared_memory.bin. When the free memory size reaches min-free-shared-file-size,
 # the shared memory size increases by the following value.
-inc-shared-file-size = 100M
+inc-shared-file-size = 2G
 
 # How often do checking the free space in shared_memory.bin. A very frequent checking can decrease performance.
 # It's not critical if the free size became very small, because the daemon catches the `bad_alloc` exception
 # and resizes. The optimal strategy is do checking of the free space, but not very often.
-block-num-check-free-size = 10 # each 30 seconds
+block-num-check-free-size = 1000 # each 3000 seconds
 
-plugin = chain p2p json_rpc webserver network_broadcast_api witness test_api database_api private_message follow social_network market_history account_by_key account_history operation_history statsd block_info raw_block debug_node witness_api
+plugin = chain p2p json_rpc webserver network_broadcast_api witness test_api database_api private_message follow social_network market_history account_by_key operation_history account_history statsd block_info raw_block witness_api mongo_db
 
 # Remove votes before defined block, should increase performance
-clear-votes-before-block = 0 # don't clear votes
+clear-votes-before-block = 4294967295 # clear votes after each cashout
 
 # Virtual operations will not be passed to the plugins, enabling of the option helps to save some memory.
 skip-virtual-ops = false
@@ -78,13 +78,13 @@ skip-virtual-ops = false
 # track-account-range =
 
 # Defines a list of operations which will be explicitly logged by the account_history plugin.
-# history-whitelist-ops =
+# history-whitelist-ops = account_create_operation account_update_operation comment_operation delete_comment_operation vote_operation author_reward_operation curation_reward_operation liquidity_reward_operation interest_operation fill_convert_request_operation transfer_operation transfer_to_vesting_operation withdraw_vesting_operation witness_update_operation account_witness_vote_operation account_witness_proxy_operation feed_publish_operation limit_order_create_operation fill_order_operation limit_order_cancel_operation pow_operation fill_vesting_withdraw_operation shutdown_witness_operation custom_operation request_account_recovery_operation recover_account_operation change_recovery_account_operation escrow_transfer_operation escrow_approve_operation escrow_dispute_operation escrow_release_operation transfer_to_savings_operation transfer_from_savings_operation cancel_transfer_from_savings_operation decline_voting_rights_operation  comment_benefactor_reward_operation
 
 # Defines a list of operations which will be explicitly ignored by the account_history plugin.
 # history-blacklist-ops =
 
 # Defines starting block from which recording stats by the account_history plugin.
-# history-start-block =
+# history-start-block = 0
 
 # Set the maximum size of cached feed for an account
 follow-max-feed-size = 500
@@ -99,22 +99,22 @@ history-per-size = 5760
 # pm-account-range =
 
 # Enable block production, even if the chain is stale.
-enable-stale-production = true
+enable-stale-production = false
 
 # Percent of witnesses (0-99) that must be participating in order to produce blocks
 required-participation = 0
 
 # name of witness controlled by this node (e.g. initwitness )
-witness = "cyberfounder"
+# witness =
 
 # name of miner and its private key (e.g. ["account","WIF PRIVATE KEY"] )
-miner = ["cyberfounder","5JVFFWRLwz6JoP9kguuRFfytToGU6cLgBVTL9t6NB3D3BQLbUBS"]
+# miner =
 
 # Number of threads to use for proof of work mining
-mining-threads = 1
+mining-threads = 0
 
 # WIF PRIVATE KEY to be used by one or more witnesses or miners
-private-key = 5JVFFWRLwz6JoP9kguuRFfytToGU6cLgBVTL9t6NB3D3BQLbUBS
+# private-key =
 
 # Account creation fee to be voted on upon successful POW - Minimum fee is 100.000 STEEM (written as 100000)
 # miner-account-creation-fee =
@@ -137,10 +137,10 @@ filename=logs/p2p/p2p.log
 # route any messages logged to the default logger to the "stderr" logger we
 # declared above, if they are info level are higher
 [logger.default]
-level=info
+level=debug
 appenders=stderr
 
 # route messages sent to the "p2p" logger to stderr too
 [logger.p2p]
-level=info
+level=error
 appenders=stderr
