--- a/plugins/mongo_db/CMakeLists.txt
+++ b/plugins/mongo_db/CMakeLists.txt
@@ -15,7 +15,7 @@ find_package(libmongoc-1.0 1.8)
 if (NOT libmongoc-1.0_FOUND)
   message("Could NOT find MongoDB drivers. Installing them...")
   execute_process(COMMAND sudo apt-get -y install pkg-config libssl-dev libsasl2-dev wget)
-  execute_process(COMMAND wgeet https://github.com/mongodb/mongo-c-driver/releases/download/1.9.5/mongo-c-driver-1.9.5.tar.gz)
+  execute_process(COMMAND wget https://github.com/mongodb/mongo-c-driver/releases/download/1.9.5/mongo-c-driver-1.9.5.tar.gz)
   execute_process(COMMAND tar xzf mongo-c-driver-1.9.5.tar.gz)
   execute_process(COMMAND ./configure --disable-automatic-init-and-cleanup --enable-static WORKING_DIRECTORY mongo-c-driver-1.9.5)
   execute_process(COMMAND make WORKING_DIRECTORY mongo-c-driver-1.9.5)
