--- a/plugins/mongo_db/CMakeLists.txt
+++ b/plugins/mongo_db/CMakeLists.txt
@@ -19,13 +19,13 @@ if (NOT libmongoc-1.0_FOUND)
   execute_process(COMMAND tar xzf mongo-c-driver-1.9.5.tar.gz)
   execute_process(COMMAND ./configure --disable-automatic-init-and-cleanup --enable-static WORKING_DIRECTORY mongo-c-driver-1.9.5)
   execute_process(COMMAND make WORKING_DIRECTORY mongo-c-driver-1.9.5)
-  execute_process(COMMAND sudo make install WORKING_DIRECTORY mongo-c-driver-1.9.5)
+  execute_process(COMMAND make install WORKING_DIRECTORY mongo-c-driver-1.9.5)
 
   execute_process(COMMAND git clone https://github.com/mongodb/mongo-cxx-driver.git --branch releases/v3.2 --depth 1 )
   execute_process(COMMAND cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local .. WORKING_DIRECTORY mongo-cxx-driver/build)
-  execute_process(COMMAND sudo make EP_mnmlstc_core WORKING_DIRECTORY mongo-cxx-driver/build)
+  execute_process(COMMAND make EP_mnmlstc_core WORKING_DIRECTORY mongo-cxx-driver/build)
   execute_process(COMMAND make WORKING_DIRECTORY mongo-cxx-driver/build)
-  execute_process(COMMAND sudo make install WORKING_DIRECTORY mongo-cxx-driver/build)
+  execute_process(COMMAND make install WORKING_DIRECTORY mongo-cxx-driver/build)
 endif()
 
 message("MongoDB found, building plugin...")
