Unsuccess merge results fix

--- a/libraries/api/CMakeLists.txt
+++ b/libraries/api/CMakeLists.txt
@@ -1,10 +1,9 @@
 set(CURRENT_TARGET api)
 
 list(APPEND CURRENT_TARGET_HEADERS
+    include/golos/api/extended_account.hpp
     include/golos/api/account_api_object.hpp
     include/golos/api/comment_api_object.hpp
-    include/golos/api/chain_api_properties.hpp
-    include/golos/api/witness_api_object.hpp
     include/golos/api/discussion.hpp
     include/golos/api/vote_state.hpp
     include/golos/api/account_vote.hpp
@@ -15,8 +14,6 @@ list(APPEND CURRENT_TARGET_SOURCES
     account_api_object.cpp
     discussion_helper.cpp
     comment_api_object.cpp
-    chain_api_properties.cpp
-    witness_api_object.cpp
 )
 
 if(BUILD_SHARED_LIBRARIES)
@@ -37,6 +34,7 @@ set_property(TARGET golos_${CURRENT_TARGET} PROPERTY EXPORT_NAME ${CURRENT_TARGE
 target_link_libraries(
     golos_${CURRENT_TARGET}
     golos_chain
+    golos::chain_plugin
     golos_protocol
     graphene_utilities
     fc
