No_mongo and Testnet_no_mongo versions

--- a/programs/cli_wallet/CMakeLists.txt
+++ b/programs/cli_wallet/CMakeLists.txt
@@ -13,6 +13,11 @@ if(GPERFTOOLS_FOUND)
     list(APPEND PLATFORM_SPECIFIC_LIBS tcmalloc)
 endif()
 
+option(NO_MONGO "Do not build mongodb plugin" FALSE)
+if(NOT NO_MONGO)
+  set(MONGO_LIB golos::mongo_db)
+endif()
+
 FIND_PACKAGE(Boost  REQUIRED COMPONENTS
     regex
 )
@@ -34,7 +39,7 @@ target_link_libraries(
         golos::follow
         golos::network_broadcast_api
         golos::witness_api
-        golos::mongo_db
+        ${MONGO_LIB}
         fc
         ${readline_libraries}
         ${CMAKE_DL_LIBS}
