--- a/share/golosd/docker/Dockerfile-mongo
+++ b/share/golosd/docker/Dockerfile-mongo
@@ -47,6 +47,7 @@ RUN \
         -DBUILD_SHARED_LIBRARIES=FALSE \
         -DLOW_MEMORY_NODE=FALSE \
         -DCHAINBASE_CHECK_LOCKING=FALSE \
+        -DNO_MONGO=FALSE \
         .. \
     && \
     make -j$(nproc) && \
