--- a/share/golosd/config/config.ini
+++ b/share/golosd/config/config.ini
@@ -1,5 +1,3 @@
-mongodb-uri = mongodb://172.17.0.1:27017/Golos
-
 # Endpoint for P2P node to listen on
 p2p-endpoint = 0.0.0.0:4243
 
@@ -68,7 +66,7 @@ inc-shared-file-size = 2G
 # and resizes. The optimal strategy is do checking of the free space, but not very often.
 block-num-check-free-size = 1000 # each 3000 seconds
 
-plugin = chain p2p json_rpc webserver network_broadcast_api witness test_api database_api private_message follow social_network tags market_history account_by_key operation_history account_history statsd block_info raw_block witness_api mongo_db
+plugin = chain p2p json_rpc webserver network_broadcast_api witness test_api database_api private_message follow social_network tags market_history account_by_key operation_history account_history statsd block_info raw_block witness_api
 
 # Remove votes before defined block, should increase performance
 clear-votes-before-block = 4294967295 # clear votes after each cashout
