--- a/share/golosd/docker/Dockerfile-testnet
+++ b/share/golosd/docker/Dockerfile-testnet
@@ -42,6 +42,7 @@ RUN \
         -DBUILD_SHARED_LIBRARIES=FALSE \
         -DLOW_MEMORY_NODE=FALSE \
         -DCHAINBASE_CHECK_LOCKING=FALSE \
+        -DNO_MONGO=TRUE \
         .. \
     && \
     make -j$(nproc) && \
