--- a/share/golosd/docker/Dockerfile-testnet-mongo
+++ b/share/golosd/docker/Dockerfile-testnet-mongo
@@ -1,9 +1,8 @@
-FROM phusion/baseimage:0.9.19
+FROM phusion/baseimage:0.9.22
 
 ENV LANG=en_US.UTF-8
 
-RUN \
-    apt-get update && \
+RUN apt-get update && \
     apt-get install -y \
         autoconf \
         automake \
@@ -11,9 +10,9 @@ RUN \
         bsdmainutils \
         build-essential \
         cmake \
+        ccache \
         doxygen \
         git \
-        ccache\
         libboost-all-dev \
         libreadline-dev \
         libssl-dev \
@@ -39,11 +38,11 @@ RUN \
     cd build && \
     cmake \
         -DCMAKE_BUILD_TYPE=Release \
-        -DBUILD_GOLOS_TESTNET=FALSE \
+        -DBUILD_GOLOS_TESTNET=TRUE \
         -DBUILD_SHARED_LIBRARIES=FALSE \
-        -DLOW_MEMORY_NODE=TRUE \
+        -DLOW_MEMORY_NODE=FALSE \
         -DCHAINBASE_CHECK_LOCKING=FALSE \
-        -DNO_MONGO=TRUE \
+        -DNO_MONGO=FALSE \
         .. \
     && \
     make -j$(nproc) && \
@@ -109,8 +108,6 @@ RUN mkdir /var/cache/golosd && \
 ENV HOME /var/lib/golosd
 RUN chown golosd:golosd -R /var/lib/golosd
 
-ADD share/golosd/snapshot5392323.json /var/lib/golosd
-
 # rpc service:
 # http
 EXPOSE 8090
@@ -123,8 +120,8 @@ RUN mkdir -p /etc/service/golosd
 ADD share/golosd/golosd.sh /etc/service/golosd/run
 RUN chmod +x /etc/service/golosd/run
 
-# add seednodes from documentation to image
-ADD share/golosd/seednodes /etc/golosd/seednodes
-
 # the following adds lots of logging info to stdout
-ADD share/golosd/config/config.ini /etc/golosd/config.ini
+ADD share/golosd/config/config_debug.ini /etc/golosd/config.ini
+
+# put blockchain data into separate docker volume
+VOLUME /var/lib/golosd
