Changes requested by afalaleev

--- a/share/golosd/config/config_debug_mongo.ini
+++ b/share/golosd/config/config_debug_mongo.ini
@@ -1,5 +1,3 @@
-mongodb-uri = mongodb://172.17.0.1:27017/Golos
-
 # Endpoint for P2P node to listen on
 # p2p-endpoint =
 
@@ -69,6 +67,9 @@ inc-shared-file-size = 100M
 block-num-check-free-size = 10 # each 30 seconds
 
 plugin = chain p2p json_rpc webserver network_broadcast_api witness test_api database_api private_message follow social_network tags market_history account_by_key account_history operation_history statsd block_info raw_block debug_node witness_api mongo_db
+
+# For connect to mongodb which is running outside Docker (if golosd running inside)
+mongodb-uri = mongodb://172.17.0.1:27017/Golos
 
 # Remove votes before defined block, should increase performance
 clear-votes-before-block = 0 # don't clear votes
