--- a/share/golosd/docker/Dockerfile-lowmem-small
+++ b/share/golosd/docker/Dockerfile-lowmem-small
@@ -27,8 +27,7 @@ RUN \
         python3-dev \
         python3-pip \
     && \
-    pip3 install gcovr
-
+    pip3 install gcovr && \
     # build golosd
     cd /usr/local/src/golos && \
     git submodule deinit -f . && \
@@ -41,7 +40,6 @@ RUN \
         -DBUILD_SHARED_LIBRARIES=FALSE \
         -DLOW_MEMORY_NODE=TRUE \
         -DCHAINBASE_CHECK_LOCKING=FALSE \
-        -DNO_MONGO=TRUE \
         .. \
     && \
     make -j$(nproc) && \
