--- a/share/golosd/docker/Dockerfile-small
+++ b/share/golosd/docker/Dockerfile-small
@@ -41,7 +41,7 @@ RUN \
         -DBUILD_SHARED_LIBRARIES=FALSE \
         -DLOW_MEMORY_NODE=FALSE \
         -DCHAINBASE_CHECK_LOCKING=FALSE \
-        -DNO_MONGO=TRUE \
+        -DENABLE_MONGO_PLUGIN=FALSE \
         .. \
     && \
     make -j$(nproc) && \
