--- a/programs/golosd/CMakeLists.txt
+++ b/programs/golosd/CMakeLists.txt
@@ -28,6 +28,7 @@ target_link_libraries(
         golos::social_network
         golos::tags
         golos::market_history
+        golos::operation_history
         golos::statsd
         golos::account_by_key
         golos::account_history
@@ -37,6 +38,7 @@ target_link_libraries(
         golos::raw_block
         golos::block_info
         golos::json_rpc
+        golos::follow
         ${MONGO_LIB}
         golos_protocol
         fc
