--- a/share/golosd/docker/Dockerfile-small
+++ b/share/golosd/docker/Dockerfile-small
@@ -27,8 +27,7 @@ RUN \
         python3-dev \
         python3-pip \
     && \
-    pip3 install gcovr
-
+    pip3 install gcovr && \
     # build golosd
     cd /usr/local/src/golos && \
     git submodule deinit -f . && \
