Filling posts for worker API objects  #1027

--- a/plugins/worker_api/CMakeLists.txt
+++ b/plugins/worker_api/CMakeLists.txt
@@ -33,6 +33,9 @@ target_link_libraries(
         golos::protocol
         golos::network
         golos::json_rpc
+        golos::api
+        golos::follow
+        golos::social_network
         graphene_utilities
         graphene_time
         appbase
