Create unit tests for worker techspecs #1111

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,8 @@
 file(GLOB COMMON_SOURCES
         common/database_fixture.cpp
         common/database_fixture.hpp
-        common/comment_reward.hpp)
+        common/comment_reward.hpp
+        common/worker_fixture.hpp)
 
 find_package(Gperftools QUIET)
 if(GPERFTOOLS_FOUND)
@@ -40,7 +41,8 @@ file(GLOB PLUGIN_TESTS
     "plugin_tests/account_history.cpp"
     "plugin_tests/account_notes.cpp"
     "plugin_tests/follow.cpp"
-    "plugin_tests/worker_api.cpp"
+    "plugin_tests/worker_api_proposal.cpp"
+    "plugin_tests/worker_api_techspec.cpp"
     "plugin_tests/private_message.cpp")
 add_executable(plugin_test ${PLUGIN_TESTS} ${COMMON_SOURCES})
 target_link_libraries(plugin_test
