--- a/share/golosd/config/config_debug_mongo.ini
+++ b/share/golosd/config/config_debug_mongo.ini
@@ -66,7 +66,7 @@ inc-shared-file-size = 100M
 # and resizes. The optimal strategy is do checking of the free space, but not very often.
 block-num-check-free-size = 10 # each 30 seconds
 
-plugin = chain p2p json_rpc webserver network_broadcast_api witness test_api database_api private_message follow social_network tags market_history account_by_key account_history account_notes operation_history statsd block_info raw_block debug_node witness_api mongo_db
+plugin = chain p2p json_rpc webserver network_broadcast_api witness test_api database_api private_message follow social_network tags market_history account_by_key account_history account_notes operation_dump operation_history statsd block_info raw_block debug_node witness_api mongo_db
 
 # For connect to mongodb which is running outside Docker (if golosd running inside)
 mongodb-uri = mongodb://172.17.0.1:27017/Golos
